<resources>
    <string name="app_name">House Cleaning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">House Cleaning</string>
    <string name="nav_header_subtitle">housecleaning@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">House Cleaning</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_myposts">All posts</string>
    <string name="menu_addpost">New Post</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logout">Logout</string>
    <string name="api_key">AIzaSyCBGsKIfJT2qrmHre9yNlRxQY2zlyr_EXw</string>

    <string-array name="languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

    <!--    <resources>-->
    <!--        <string name="app">dropDownMenuExample</string>-->

    <!--    </resources>-->
</resources>