<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.house_cleaning_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.house_cleaning_app.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.house_cleaning_app.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.house_cleaning_app.ui.profile.ProfileFragment"
        android:label="My Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_allPosts"
        android:name="com.example.house_cleaning_app.ui.jobs.AllPostsFragment"
        android:label="My Posts"
        tools:layout="@layout/fragment_all_posts" />
    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.house_cleaning_app.ui.managePost.AddpostFragment"
        android:label="@string/menu_addPost"
        tools:layout="@layout/fragment_addpost" />
    <fragment
        android:id="@+id/nav_myPosts"
        android:name="com.example.house_cleaning_app.ui.post.MyPostsFragment"
        android:label="fragment_my_posts"
        tools:layout="@layout/fragment_my_posts" />
    <fragment
        android:id="@+id/nav_myJobs"
        android:name="com.example.house_cleaning_app.ui.myJobs.MyJobsFragment"
        android:label="fragment_my_jobs"
        tools:layout="@layout/fragment_my_jobs" />
    <fragment
        android:id="@+id/nav_floorPrice"
        android:name="com.example.house_cleaning_app.ui.pricing.FloorPriceFragment"
        android:label="fragment_floor_price"
        tools:layout="@layout/fragment_floor_price" />
    <fragment
        android:id="@+id/nav_adminViewUsers"
        android:name="com.example.house_cleaning_app.ui.adminViewUsers.AdminViewUsersFragment"
        android:label="AdminViewUsersFragment" />
</navigation>